--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
 			            }
 			        },
 			        itemStyle: {
+                        show:false,
 			            normal: {
 			                color: 'rgb(29,183,255)'
 			            }
